force-app/main/default/objects/WCSA_Account_Notes__c/WCSA_Account_Notes__c.object-meta.xml
<CustomObject>
    <description>Voice: WCSA - Notes listed at the Account / Company level in Salesforce records</description>
    <label>V: WCSA Account Note</label>
    <nameField>
        <displayFormat>WAN-{000000000}</displayFormat>
        <label>WCSA Note</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>V: WCSA Account Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>