force-app/main/default/objects/WCSA_Account_Notes__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>V: WCSA Account Notes</relationshipLabel>
    <relationshipName>V_WCSA_Account_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>