force-app/main/default/objects/WCSA_Account_Notes__c/fields/Company_Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Company_Key_Account__c</fullName>
    <description>Voice: WCSA : Salesforce - Company which owns the record</description>
    <inlineHelpText>Voice: WCSA : Salesforce - Company which owns the record</inlineHelpText>
    <label>Company Key - Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Voice_WCSA_Account_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>