force-app/main/default/objects/WCSA_Account_Notes__c/fields/CS_Support_Rep__c.field-meta.xml
<CustomField>
    <fullName>CS_Support_Rep__c</fullName>
    <description>Voice - WCSA - Support Rep of the WCSA Company Note</description>
    <inlineHelpText>Voice - WCSA - Support Rep of the WCSA Company Note</inlineHelpText>
    <label>CS Support Rep</label>
    <length>40</length>
    <type>Text</type>
</CustomField>