force-app/main/default/objects/WCSA_Account_Notes__c/fields/Date_of_Note__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Note__c</fullName>
    <description>Voice - WCSA - Account Note from Company Level and User Level Accounts</description>
    <inlineHelpText>Voice - WCSA - Account Note from Company Level and User Level Accounts</inlineHelpText>
    <label>Date of Note</label>
    <type>Date</type>
</CustomField>