force-app/main/default/objects/WCSA_Account_Notes__c/fields/Note_Body__c.field-meta.xml
<CustomField>
    <fullName>Note_Body__c</fullName>
    <description>Voice - WCSA - Account Note Body Text (Up to 8,000 characters)</description>
    <inlineHelpText>Voice - WCSA - Account Note Body Text (Up to 8,000 characters)</inlineHelpText>
    <label>Note: Body</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>