force-app/main/default/objects/WCSA_Account_Notes__c/fields/Note_Description__c.field-meta.xml
<CustomField>
    <fullName>Note_Description__c</fullName>
    <description>Voice - WCSA - Account Note Description</description>
    <inlineHelpText>Voice - WCSA - Account Note Description</inlineHelpText>
    <label>Note Description</label>
    <length>60</length>
    <type>Text</type>
</CustomField>