force-app/main/default/objects/WCSA_Account_Notes__c/fields/Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Note_Type__c</fullName>
    <description>Voice - WCSA - Account Note Type</description>
    <inlineHelpText>Voice - WCSA - Account Note Type</inlineHelpText>
    <label>Note Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>