force-app/main/default/objects/WCSA_Account_Notes__c/fields/Support_Note_Key__c.field-meta.xml
<CustomField>
    <fullName>Support_Note_Key__c</fullName>
    <description>Voice - WCSA - Matching value</description>
    <externalId>true</externalId>
    <inlineHelpText>Voice - WCSA - Matching value</inlineHelpText>
    <label>Support_Note_Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>