force-app/main/default/objects/WCSA_Account_Notes__c/fields/Support_Rep__c.field-meta.xml
<CustomField>
    <fullName>Support_Rep__c</fullName>
    <description>Voice - WCSA - Account Note Rep Name</description>
    <formula>$User.FirstName + &apos; &apos; +  $User.LastName</formula>
    <inlineHelpText>Voice - WCSA - Account Note Rep Name</inlineHelpText>
    <label>Support Rep</label>
    <type>Text</type>
</CustomField>